# FastApi

fastApi (CRUD operations in memory)/FastApi-sqlmodal/: pyproject.toml
fastApi (CRUD operations in memory)/FastApi-sqlmodal/fastapi_sqlmodal/: main.py
fastApi (CRUD operations in memory)/FastApiy/: README.md  pyproject.toml
fastApi (CRUD operations in memory)/FastApiy/fastapiy/: main.py
fastApi (CRUD operations in memory)/fastApi-validations/: pyproject.toml
fastApi (CRUD operations in memory)/fastApi-validations/fastapi_validations/: main.py
fastApi (CRUD operations in memory)/fastApi-validations/tests/: test_main.py
sqlmodel/: pyproject.toml
sqlmodel/mysqlmodel/: main.py
sqlmodel/mysqlmodel/config/: db.py
sqlmodel/mysqlmodel/models/: todo.py
