[tool.poetry]
name = "fastapiy"
version = "0.1.0"
description = ""
authors = ["talhak911 <talhakhan8300@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
[tool.poetry.scripts]
dev = "fastapiy.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
